# patientsQueue

./: CMakeLists.txt  Patient.cpp  Patient.h  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
